--- a/trunk/shaman/ui/configDialog.ui
+++ b/trunk/shaman/ui/configDialog.ui
@@ -78,7 +78,7 @@
       </sizepolicy>
      </property>
      <property name="currentIndex" >
-      <number>0</number>
+      <number>4</number>
      </property>
      <widget class="QWidget" name="Seite" >
       <layout class="QVBoxLayout" >
@@ -230,9 +230,9 @@
               <property name="html" >
                <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
 p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Liberation Sans'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Shaman Manteinance.&lt;/p>
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Please choose an action from the Drop-Down Menu.&lt;/p>&lt;/body>&lt;/html></string>
+&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:10pt; font-weight:400; font-style:normal;">
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Liberation Sans'; font-size:9pt;">Shaman Manteinance.&lt;/p>
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Liberation Sans'; font-size:9pt;">Please choose an action from the Drop-Down Menu.&lt;/p>&lt;/body>&lt;/html></string>
               </property>
              </widget>
             </item>
@@ -799,166 +799,199 @@ and Pacman.</string>
       </layout>
      </widget>
      <widget class="QWidget" name="page_2" >
-      <widget class="QWidget" name="" >
-       <property name="geometry" >
-        <rect>
-         <x>0</x>
-         <y>0</y>
-         <width>671</width>
-         <height>391</height>
-        </rect>
-       </property>
-       <layout class="QVBoxLayout" >
-        <item>
-         <widget class="QGroupBox" name="groupBox_11" >
-          <property name="title" >
-           <string>When Application is in System Tray only</string>
-          </property>
-          <layout class="QGridLayout" >
-           <item row="0" column="0" colspan="2" >
-            <widget class="QCheckBox" name="updateDbTrayBox" >
-             <property name="text" >
-              <string>Update Database every</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="2" colspan="2" >
-            <widget class="QSpinBox" name="minutesSpin" >
-             <property name="enabled" >
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="4" >
-            <widget class="QLabel" name="label_16" >
-             <property name="text" >
-              <string>minutes</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="0" >
-            <widget class="QLabel" name="label_17" >
-             <property name="text" >
-              <string>If upgrades are available:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="1" colspan="2" >
-            <widget class="QRadioButton" name="upNotifyRadio" >
-             <property name="text" >
-              <string>Just Notify</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="3" colspan="2" >
-            <widget class="QRadioButton" name="upNotifyAddRadio" >
-             <property name="text" >
-              <string>Notify and add them to Queue</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="3" >
-            <widget class="QCheckBox" name="updateDbShowNotify" >
-             <property name="text" >
-              <string>Show tray notification Windows</string>
-             </property>
-             <property name="checked" >
-              <bool>false</bool>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </widget>
-        </item>
-        <item>
-         <widget class="QGroupBox" name="groupBox_12" >
-          <property name="title" >
-           <string>Proxy Settings</string>
-          </property>
-          <layout class="QGridLayout" >
-           <item row="0" column="0" >
-            <widget class="QCheckBox" name="enableProxyBox" >
-             <property name="sizePolicy" >
-              <sizepolicy vsizetype="Fixed" hsizetype="Minimum" >
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="text" >
-              <string>Enable Proxy</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="1" >
-            <widget class="QLineEdit" name="proxyServer" >
-             <property name="sizePolicy" >
-              <sizepolicy vsizetype="Fixed" hsizetype="MinimumExpanding" >
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="minimumSize" >
-              <size>
-               <width>0</width>
-               <height>0</height>
-              </size>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="2" >
-            <widget class="QLineEdit" name="proxyPort" >
-             <property name="sizePolicy" >
-              <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="minimumSize" >
-              <size>
-               <width>40</width>
-               <height>0</height>
-              </size>
-             </property>
-             <property name="maximumSize" >
-              <size>
-               <width>40</width>
-               <height>16777215</height>
-              </size>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="4" >
-            <spacer>
-             <property name="orientation" >
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" >
-              <size>
-               <width>191</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-           <item row="0" column="3" >
-            <widget class="QCheckBox" name="httpProxyBox" >
-             <property name="text" >
-              <string>HTTP Proxy</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="3" >
-            <widget class="QCheckBox" name="ftpProxyBox" >
-             <property name="text" >
-              <string>FTP Proxy</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </widget>
-        </item>
-       </layout>
-      </widget>
+      <layout class="QGridLayout" >
+       <item row="0" column="0" >
+        <layout class="QVBoxLayout" >
+         <item>
+          <widget class="QGroupBox" name="groupBox_11" >
+           <property name="title" >
+            <string>When Application is in System Tray only</string>
+           </property>
+           <layout class="QGridLayout" >
+            <item row="0" column="0" colspan="2" >
+             <widget class="QCheckBox" name="updateDbTrayBox" >
+              <property name="text" >
+               <string>Update Database every</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="2" >
+             <widget class="QSpinBox" name="minutesSpin" >
+              <property name="enabled" >
+               <bool>true</bool>
+              </property>
+              <property name="suffix" >
+               <string>min</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="0" colspan="3" >
+             <widget class="QCheckBox" name="updateDbShowNotify" >
+              <property name="text" >
+               <string>Show tray notification Windows</string>
+              </property>
+              <property name="checked" >
+               <bool>false</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="0" >
+             <widget class="QLabel" name="label_17" >
+              <property name="text" >
+               <string>If upgrades are available:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="1" colspan="2" >
+             <widget class="QRadioButton" name="upNotifyRadio" >
+              <property name="text" >
+               <string>Just Notify</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="3" >
+             <widget class="QRadioButton" name="upNotifyAddRadio" >
+              <property name="text" >
+               <string>Notify and add them to Queue</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </widget>
+         </item>
+         <item>
+          <widget class="QGroupBox" name="groupBox_12" >
+           <property name="title" >
+            <string>Proxy Settings</string>
+           </property>
+           <layout class="QGridLayout" >
+            <item row="0" column="0" colspan="2" >
+             <widget class="QCheckBox" name="enableProxyBox" >
+              <property name="sizePolicy" >
+               <sizepolicy vsizetype="Fixed" hsizetype="Minimum" >
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="text" >
+               <string>Enable Proxy</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="1" >
+             <widget class="QLabel" name="label_16" >
+              <property name="text" >
+               <string>IP:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="2" >
+             <widget class="QLineEdit" name="proxyServer" >
+              <property name="sizePolicy" >
+               <sizepolicy vsizetype="Fixed" hsizetype="MinimumExpanding" >
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="minimumSize" >
+               <size>
+                <width>0</width>
+                <height>0</height>
+               </size>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="3" >
+             <widget class="QLabel" name="label_19" >
+              <property name="text" >
+               <string>Port:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="4" >
+             <widget class="QLineEdit" name="proxyPort" >
+              <property name="sizePolicy" >
+               <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="minimumSize" >
+               <size>
+                <width>40</width>
+                <height>0</height>
+               </size>
+              </property>
+              <property name="maximumSize" >
+               <size>
+                <width>40</width>
+                <height>16777215</height>
+               </size>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="5" >
+             <spacer>
+              <property name="orientation" >
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" >
+               <size>
+                <width>191</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item row="2" column="1" colspan="2" >
+             <widget class="QCheckBox" name="httpProxyBox" >
+              <property name="text" >
+               <string>HTTP Proxy</string>
+              </property>
+             </widget>
+            </item>
+            <item row="3" column="1" colspan="2" >
+             <widget class="QCheckBox" name="ftpProxyBox" >
+              <property name="text" >
+               <string>FTP Proxy</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="0" >
+             <spacer>
+              <property name="orientation" >
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeType" >
+               <enum>QSizePolicy::Maximum</enum>
+              </property>
+              <property name="sizeHint" >
+               <size>
+                <width>50</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item row="1" column="0" >
+        <spacer>
+         <property name="orientation" >
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" >
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
      </widget>
     </widget>
    </item>
