--- a/trunk/shaman/ui/configDialog.ui
+++ b/trunk/shaman/ui/configDialog.ui
@@ -78,7 +78,7 @@
       </sizepolicy>
      </property>
      <property name="currentIndex" >
-      <number>0</number>
+      <number>5</number>
      </property>
      <widget class="QWidget" name="Seite" >
       <layout class="QVBoxLayout" >
@@ -230,9 +230,9 @@
               <property name="html" >
                <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
 p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:10pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Liberation Sans'; font-size:9pt;">Shaman Manteinance.&lt;/p>
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Liberation Sans'; font-size:9pt;">Please choose an action from the Drop-Down Menu.&lt;/p>&lt;/body>&lt;/html></string>
+&lt;/style>&lt;/head>&lt;body style=" font-family:'Liberation Sans'; font-size:9pt; font-weight:400; font-style:normal;">
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Shaman Manteinance.&lt;/p>
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Please choose an action from the Drop-Down Menu.&lt;/p>&lt;/body>&lt;/html></string>
               </property>
              </widget>
             </item>
@@ -821,7 +821,7 @@ and Pacman.</string>
                <bool>true</bool>
               </property>
               <property name="suffix" >
-               <string>min</string>
+               <string comment="As in &quot;minutes&quot;" >min</string>
               </property>
              </widget>
             </item>
@@ -871,14 +871,14 @@ and Pacman.</string>
             <bool>false</bool>
            </property>
            <layout class="QGridLayout" >
-            <item row="1" column="1" >
+            <item row="0" column="0" >
              <widget class="QLabel" name="label_16" >
               <property name="text" >
                <string>IP:</string>
               </property>
              </widget>
             </item>
-            <item row="1" column="2" >
+            <item row="0" column="1" >
              <widget class="QLineEdit" name="proxyServer" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="Fixed" hsizetype="MinimumExpanding" >
@@ -894,14 +894,14 @@ and Pacman.</string>
               </property>
              </widget>
             </item>
-            <item row="1" column="3" >
+            <item row="0" column="2" >
              <widget class="QLabel" name="label_19" >
               <property name="text" >
                <string>Port:</string>
               </property>
              </widget>
             </item>
-            <item row="1" column="4" >
+            <item row="0" column="3" >
              <widget class="QLineEdit" name="proxyPort" >
               <property name="sizePolicy" >
                <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
@@ -923,7 +923,7 @@ and Pacman.</string>
               </property>
              </widget>
             </item>
-            <item row="1" column="5" >
+            <item row="0" column="4" >
              <spacer>
               <property name="orientation" >
                <enum>Qt::Horizontal</enum>
@@ -936,14 +936,14 @@ and Pacman.</string>
               </property>
              </spacer>
             </item>
-            <item row="2" column="1" colspan="2" >
+            <item row="1" column="0" colspan="2" >
              <widget class="QCheckBox" name="httpProxyBox" >
               <property name="text" >
                <string>HTTP Proxy</string>
               </property>
              </widget>
             </item>
-            <item row="3" column="1" colspan="2" >
+            <item row="2" column="0" colspan="2" >
              <widget class="QCheckBox" name="ftpProxyBox" >
               <property name="text" >
                <string>FTP Proxy</string>
@@ -969,6 +969,79 @@ and Pacman.</string>
         </spacer>
        </item>
       </layout>
+     </widget>
+     <widget class="QWidget" name="page_3" >
+      <widget class="QGroupBox" name="useRSSBox" >
+       <property name="geometry" >
+        <rect>
+         <x>0</x>
+         <y>10</y>
+         <width>681</width>
+         <height>211</height>
+        </rect>
+       </property>
+       <property name="title" >
+        <string>Use Shaman RSS Capabilities</string>
+       </property>
+       <property name="checkable" >
+        <bool>true</bool>
+       </property>
+       <property name="checked" >
+        <bool>false</bool>
+       </property>
+       <widget class="QCheckBox" name="checkBox_16" >
+        <property name="geometry" >
+         <rect>
+          <x>20</x>
+          <y>50</y>
+          <width>201</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text" >
+         <string>Update RSS Feed Every</string>
+        </property>
+       </widget>
+       <widget class="QSpinBox" name="spinBox_6" >
+        <property name="geometry" >
+         <rect>
+          <x>250</x>
+          <y>50</y>
+          <width>161</width>
+          <height>27</height>
+         </rect>
+        </property>
+        <property name="suffix" >
+         <string comment="As in &quot;minutes&quot;" >min</string>
+        </property>
+       </widget>
+       <widget class="QCheckBox" name="checkBox_17" >
+        <property name="geometry" >
+         <rect>
+          <x>20</x>
+          <y>100</y>
+          <width>221</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text" >
+         <string>Notify upon new items</string>
+        </property>
+       </widget>
+       <widget class="QCheckBox" name="checkBox_18" >
+        <property name="geometry" >
+         <rect>
+          <x>20</x>
+          <y>150</y>
+          <width>631</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text" >
+         <string>Check if there is an unread news about a package in Queue before processing it</string>
+        </property>
+       </widget>
+      </widget>
      </widget>
     </widget>
    </item>
